@@ -1,3 +1,12 @@
+2010-12-10  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/amcheck-device.pl: Fix possible hang if
+	  Amanda::MainLoop::quit is called before Amanda::MainLoop::run.
+	* perl/Amanda/Changer.pm: Return the error.
+
+2010-12-09  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/driver.c: Check if taper is flushing something before
+	  moving a dle to directq.
+
 2010-12-07 Dan Locks <dwlocks@zmanda.com>
 	*  packaging/rpm/amanda.spec.src: remove manual library requires and
 	   set curl vs libcurl based on distro.
